--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "element-plus": "^2.3.2",
+    "fast-xml-parser": "^4.1.3",
+    "libxmljs": "^1.0.8",
     "pinia": "^2.0.32",
     "vue": "^3.2.47"
   },
